tests/parser/good/return.hel
// @name return
// @phase parser
// @expect success

early = (x: i32): i32 {
    if (x == 0) {
        return 0
    } else {
        x
    }
}
