tests/parser/bad/malformed_type.hel
// @name malformed_type
// @phase parser
// @expect error

type = { x: i32 };
